static/css/style.css
body, html {
  height: 100%;
    background-color: #e8f5e9;
    margin: 0px;
    padding: 0px;
    font-family: verdana, sans-serif;
}

/* Navbar */

nav ul a {
    font-size: 18px;
}

nav ul a:hover{
    background-color: none;
    color: #2d2d2d;
    text-decoration: none;
}

/* Search Recipe field */

#search {
font-size: larger;
}

.search-input, .copyright, .links {
    width: 50%;
    min-width: 300px;
    margin-left: auto;
    margin-right: auto;
    margin-top: 20px;
    margin-bottom: 30px;
}

#search::-webkit-input-placeholder {
    text-align: center;
 }
 
 #search:-moz-placeholder { /* Firefox 18- */
    text-align: center;  
 }
 
 #search::-moz-placeholder {  /* Firefox 19+ */
    text-align: center;  
 }
 
 #search:-ms-input-placeholder {  
    text-align: center; 
 }

/* Main header */

.jumbotron {
    background-color: #8080804d;
}

.jumbo-header {
  font-size: 80px;
  font-weight: 700;
  margin-top: 100px;
  color: white;
}

p {
    font-size: 20px;
}

/* Landing page */

 .background-container {
    background-image: url("https://images.pexels.com/photos/1435895/pexels-photo-1435895.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260");
    background-position: center center;
    background-repeat: no-repeat;
    background-attachment: fixed;
    background-size: cover;
    background-color: #999;
    height: -webkit-fill-available;
    height: -moz-available;
    height: fill-available;
    width: 100%;
  }
  
  .landing-header {
    margin-top: 400px;
    font-size: 110px;
    color: white;
    text-align: center;
}

   .enter-site {
      position: absolute;
      margin-left: auto;
      margin-right: auto;
      width: 50%;
      font-size: 30px;
      background-color: transparent;
      margin-left: 100px;
  }

  #username {
      background-color: #00000042;
  }

  #username::-webkit-input-placeholder {
    text-align: center;
 }
 
 #username:-moz-placeholder { /* Firefox 18- */
    text-align: center;  
 }
 
 #username::-moz-placeholder {  /* Firefox 19+ */
    text-align: center;  
 }
 
 #username:-ms-input-placeholder {  
    text-align: center; 
 }

  /* Recipe name hyperlink */

    .title-link {
      font-size: 20px;
    color: #2d2d2d;
    text-decoration: none;
  }
  .title-link:hover {
    color: #999;
    text-decoration: none;
  }
  
/* buttons */

  .btn {
       padding: 10px;
       color: white;    
       border-radius: 5px;
       line-height: 1.0;
       margin: 10px;
       width: 100%;
   }

   .enter-btn {
     font-size: 28px;
     width: 50%!important;
       height: 100px;
   }

   /* Footer */

   a {
       color: white;
       font-size: 18px;
   }
   a:hover {
       color: #2d2d2d;
       text-decoration: none;
   }
   
   /* Media queries */

   @media (max-width: 768px) {
       nav .brand-logo {
           font-size: 15px;
       }
       .jumbo-header {
           font-size: 50px;
           margin-top: 0px;
       }
   }

   /* Form field */

   .view-ind-recipe-image { 
        text-align: center; 
        margin-bottom: 20px;
   }
   
   #img-responsive {
    width: 100%;
    height: 60%;
    margin-top: 100px;
    }
   

